create popular courses

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </header>
-        <!-- section 2 -->
+        <!-- section 1 -->
         <section class="section-1">
             <div class="content padding-200">
                 <!-- heading section 1 -->
@@ -136,6 +136,93 @@
                         </button>
                     </div>
                 </div>
+                <!-- main section 1 -->
+                <main class="main-section1">
+                    <!-- article 1 -->
+                    <article class="box">
+                        <img
+                            class="box-img"
+                            src="./assets/img/box_img_1.avif"
+                            alt="Basic web design"
+                        />
+                       <div class="infor-box">
+                        <div class="box__title">
+                            <h3>Basic web design</h3>
+                            <span class="star"
+                                ><img
+                                    class="star"
+                                    src="./assets/img/star.png"
+                                    alt=""
+                                />4.5</span
+                            >
+                        </div>
+                        <div class="box__desc">
+                            Get the best course, gain knowledge and shine for
+                            your future career.
+                        </div>
+                        <div class="box__cta">
+                            <span class="price">$120.75</span>
+                            <button class="btn btn-box">Book Now</button>
+                        </div>
+                       </div>
+                    </article>
+                    <!-- article 2 -->
+                    <article class="box">
+                        <img
+                            class="box-img"
+                            src="./assets/img/box_img_2.avif"
+                            alt="UI/UX design"
+                        />
+                       <div class="infor-box">
+                        <div class="box__title">
+                            <h3>UI/UX design</h3>
+                            <span class="star"
+                                ><img
+                                    class="star"
+                                    src="./assets/img/star.png"
+                                    alt=""
+                                />4.5</span
+                            >
+                        </div>
+                        <div class="box__desc">
+                            Get the best course, gain knowledge and shine for
+                            your future career.
+                        </div>
+                        <div class="box__cta">
+                            <span class="price">$120.75</span>
+                            <button class="btn btn-box">Book Now</button>
+                        </div>
+                       </div>
+                    </article>
+                    <!-- article 3 -->
+                    <article class="box">
+                        <img
+                        class="box-img"
+                        src="./assets/img/box_img_3.avif"
+                        alt="Web App design"
+                    />
+                   <div class="infor-box">
+                    <div class="box__title">
+                        <h3>Web App design</h3>
+                        <span class="star"
+                            ><img
+                                class="star"
+                                src="./assets/img/star.png"
+                                alt=""
+                            />4.5</span
+                        >
+                    </div>
+                    <div class="box__desc">
+                        Get the best course, gain knowledge and shine for
+                        your future career.
+                    </div>
+                    <div class="box__cta">
+                        <span class="price">$120.75</span>
+                        <button class="btn btn-box">Book Now</button>
+                    </div>
+                   </div>
+                    </article>
+                </main>
             </div>
         </section>
     </body>
