--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body>
+    <body style="height: 5000px;">
         <header class="header">
             <div class="content">
                 <!-- navbar -->
@@ -145,26 +145,26 @@
                             src="./assets/img/box_img_1.avif"
                             alt="Basic web design"
                         />
-                       <div class="infor-box">
-                        <div class="box__title">
-                            <h3>Basic web design</h3>
-                            <span class="star"
-                                ><img
-                                    class="star"
-                                    src="./assets/img/star.png"
-                                    alt=""
-                                />4.5</span
-                            >
+                        <div class="infor-box">
+                            <div class="box__title">
+                                <h3>Basic web design</h3>
+                                <span class="star"
+                                    ><img
+                                        class="star"
+                                        src="./assets/img/star.png"
+                                        alt=""
+                                    />4.5</span
+                                >
+                            </div>
+                            <div class="box__desc">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </div>
+                            <div class="box__cta">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-box">Book Now</button>
+                            </div>
                         </div>
-                        <div class="box__desc">
-                            Get the best course, gain knowledge and shine for
-                            your future career.
-                        </div>
-                        <div class="box__cta">
-                            <span class="price">$120.75</span>
-                            <button class="btn btn-box">Book Now</button>
-                        </div>
-                       </div>
                     </article>
                     <!-- article 2 -->
                     <article class="box">
@@ -173,56 +173,85 @@
                             src="./assets/img/box_img_2.avif"
                             alt="UI/UX design"
                         />
-                       <div class="infor-box">
-                        <div class="box__title">
-                            <h3>UI/UX design</h3>
-                            <span class="star"
-                                ><img
-                                    class="star"
-                                    src="./assets/img/star.png"
-                                    alt=""
-                                />4.5</span
-                            >
+                        <div class="infor-box">
+                            <div class="box__title">
+                                <h3>UI/UX design</h3>
+                                <span class="star"
+                                    ><img
+                                        class="star"
+                                        src="./assets/img/star.png"
+                                        alt=""
+                                    />4.5</span
+                                >
+                            </div>
+                            <div class="box__desc">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </div>
+                            <div class="box__cta">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-box">Book Now</button>
+                            </div>
                         </div>
-                        <div class="box__desc">
-                            Get the best course, gain knowledge and shine for
-                            your future career.
-                        </div>
-                        <div class="box__cta">
-                            <span class="price">$120.75</span>
-                            <button class="btn btn-box">Book Now</button>
-                        </div>
-                       </div>
                     </article>
                     <!-- article 3 -->
                     <article class="box">
                         <img
-                        class="box-img"
-                        src="./assets/img/box_img_3.avif"
-                        alt="Web App design"
-                    />
-                   <div class="infor-box">
-                    <div class="box__title">
-                        <h3>Web App design</h3>
-                        <span class="star"
-                            ><img
-                                class="star"
-                                src="./assets/img/star.png"
-                                alt=""
-                            />4.5</span
-                        >
-                    </div>
-                    <div class="box__desc">
-                        Get the best course, gain knowledge and shine for
-                        your future career.
-                    </div>
-                    <div class="box__cta">
-                        <span class="price">$120.75</span>
-                        <button class="btn btn-box">Book Now</button>
-                    </div>
-                   </div>
+                            class="box-img"
+                            src="./assets/img/box_img_3.avif"
+                            alt="Web App design"
+                        />
+                        <div class="infor-box">
+                            <div class="box__title">
+                                <h3>Web App design</h3>
+                                <span class="star"
+                                    ><img
+                                        class="star"
+                                        src="./assets/img/star.png"
+                                        alt=""
+                                    />4.5</span
+                                >
+                            </div>
+                            <div class="box__desc">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </div>
+                            <div class="box__cta">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-box">Book Now</button>
+                            </div>
+                        </div>
                     </article>
                 </main>
+            </div>
+        </section>
+        <!-- feed-back -->
+        <section class="feed-back">
+            <div class="content">
+                <div class="inner-content">
+                    <div class="feed-back__infor">
+                        <img
+                            class="person-img"
+                            src="./assets/img/person.avif"
+                            alt="person img"
+                        />
+                        <p class="feed-back__name">Peter Moor</p>
+                        <p class="feed-back__desc">Student of Web Design</p>
+                        <div class="control">
+                            <button class="circle"></button>
+                            <button class="circle"></button>
+                            <button class="circle"></button>
+                        </div>
+                    </div>
+                    <div class="content-feedback">
+                        <p class="inner-content-feedback">
+                            Not only does my resume look impressive—filled with the
+                            names and logos of world-class institutions—but these
+                            certificates also bring me closer to my career goals by
+                            validating the skills I've learned."
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </body>
