--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body style="height: 5000px;">
+    <body style="height: 3000px">
         <header class="header">
             <div class="content">
                 <!-- navbar -->
@@ -147,7 +147,11 @@
                         />
                         <div class="infor-box">
                             <div class="box__title">
-                                <h3>Basic web design</h3>
+                                <h3>
+                                    <a href="#!" class="line-clamp">
+                                        Basic web design
+                                    </a>
+                                </h3>
                                 <span class="star"
                                     ><img
                                         class="star"
@@ -156,9 +160,9 @@
                                     />4.5</span
                                 >
                             </div>
-                            <div class="box__desc">
+                            <div class="box__desc line-clamp line-2">
                                 Get the best course, gain knowledge and shine
-                                for your future career.
+                                for your future career 
                             </div>
                             <div class="box__cta">
                                 <span class="price">$120.75</span>
@@ -175,7 +179,11 @@
                         />
                         <div class="infor-box">
                             <div class="box__title">
-                                <h3>UI/UX design</h3>
+                                <h3>
+                                    <a href="#!" class="line-clamp"
+                                        >UI/UX design</a
+                                    >
+                                </h3>
                                 <span class="star"
                                     ><img
                                         class="star"
@@ -203,7 +211,11 @@
                         />
                         <div class="infor-box">
                             <div class="box__title">
-                                <h3>Web App design</h3>
+                                <h3>
+                                    <a href="#!" class="line-clamp">
+                                        Web App design</a
+                                    >
+                                </h3>
                                 <span class="star"
                                     ><img
                                         class="star"
@@ -245,14 +257,47 @@
                     </div>
                     <div class="content-feedback">
                         <p class="inner-content-feedback">
-                            Not only does my resume look impressive—filled with the
-                            names and logos of world-class institutions—but these
-                            certificates also bring me closer to my career goals by
-                            validating the skills I've learned."
+                            Not only does my resume look impressive—filled with
+                            the names and logos of world-class institutions—but
+                            these certificates also bring me closer to my career
+                            goals by validating the skills I've learned."
                         </p>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- section 2 -->
+        <div class="section-2 padding-200">
+            <div class="content">
+                <div class="inner-content-st2">
+                    <div class="section-2__left">
+                        <img
+                            class="section-2-img lower"
+                            src="./assets/img/box_img_1.avif"
+                            alt="Learner outcomes through our awesome platform"
+                        />
+                        <img
+                            class="section-2-img"
+                            src="./assets/img/box_img_2.avif"
+                            alt="Learner outcomes through our awesome platform"
+                        />
+                    </div>
+                    <div class="section-2__right">
+                        <h2 class="section-2__title">
+                            Learner outcomes through our awesome platform
+                        </h2>
+                        <p class="section-2__desc">
+                            87% of people learning for professional development
+                            report career benefits like getting a promotion, a
+                            raise, or starting a new career.
+                        </p>
+                        <p class="section-2__desc">
+                            Lesson Impact Report (2022)
+                        </p>
+                        <a href="#!" class="btn btn-section2">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
