--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body style="height: 3000px">
+    <body style="height: 5000px">
         <header class="header">
             <div class="content">
                 <!-- navbar -->
@@ -115,7 +115,7 @@
                 <!-- heading section 1 -->
                 <div class="heading">
                     <div class="infor">
-                        <h2 class="title">Our popular courses</h2>
+                        <h2 class="title heading">Our popular courses</h2>
                         <p class="desc">
                             Build new skills with new trendy courses and shine
                             for the next future career.
@@ -162,7 +162,7 @@
                             </div>
                             <div class="box__desc line-clamp line-2">
                                 Get the best course, gain knowledge and shine
-                                for your future career 
+                                for your future career
                             </div>
                             <div class="box__cta">
                                 <span class="price">$120.75</span>
@@ -269,7 +269,8 @@
         <!-- section 2 -->
         <div class="section-2 padding-200">
             <div class="content">
-                <div class="inner-content-st2">
+                <!-- features 01 -->
+                <div class="features-01 features">
                     <div class="section-2__left">
                         <img
                             class="section-2-img lower"
@@ -283,19 +284,102 @@
                         />
                     </div>
                     <div class="section-2__right">
-                        <h2 class="section-2__title">
+                        <h2 class="section-2__title heading">
                             Learner outcomes through our awesome platform
                         </h2>
-                        <p class="section-2__desc">
+                        <p class="section-2__desc desc">
                             87% of people learning for professional development
                             report career benefits like getting a promotion, a
                             raise, or starting a new career.
                         </p>
-                        <p class="section-2__desc">
+                        <p class="section-2__desc desc">
                             Lesson Impact Report (2022)
                         </p>
                         <a href="#!" class="btn btn-section2">Sign Up</a>
                     </div>
+                </div>
+                <!-- features 01 -->
+                <div class="features-02 features">
+                    <div class="features2__content">
+                        <h2 class="features2__title heading">
+                            Take the next step toward your personal and
+                            professional goals with Lesson.
+                        </h2>
+                        <p class="features2__desc desc">
+                            Take the next step toward. Join now to receive
+                            personalized and more recommendations from the full
+                            Coursera catalog.
+                        </p>
+                        <a href="#!" class="btn btn-section2">Join now</a>
+                    </div>
+                    <img src="./assets/img/banner.jfif" class="features__img" />
+                </div>
+            </div>
+        </div>
+        <!-- blog -->
+        <div class="blog">
+            <div class="content">
+                <div class="inner-blog">
+                    <h2 class="heading">Our blog</h2>
+                    <p class="desc">
+                        Read our regular travel blog and know the latest update
+                        of tour and travel
+                    </p>
+                </div>
+                <main class="main-blog">
+                    <!-- blog item 1 -->
+                    <article class="blog-box">
+                        <img class="blog-img"
+                            src="./assets/img/blog-1.avif"
+                            alt=" How to become a pro web designer in 2022 and get
+                        remot job?"
+                        />
+                       <div class="blog__infor">
+                            <p class="desc">21 November 2021</p>
+                            <p class="question">
+                                How to become a pro web designer in 2022 and get
+                                remot job?
+                            </p>
+                            <button class="btn">Read More</button>
+                       </div>
+                    </article>
+                    <!-- blog item 2 -->
+                    <article class="blog-box">
+                        <img class="blog-img"
+                            src="./assets/img/blog-2.avif"
+                            alt=" How to become a pro web designer in 2022 and get
+                        remot job?"
+                        />
+                       <div class="blog__infor">
+                            <p class="desc">21 November 2021</p>
+                            <p class="question">
+                                How to become a pro web designer in 2022 and get
+                                remot job?
+                            </p>
+                            <button class="btn">Read More</button>
+                       </div>
+                    </article>
+                     <!-- blog item 3 -->
+                     <article class="blog-box">
+                        <img class="blog-img"
+                            src="./assets/img/blog-3.avif"
+                            alt=" How to become a pro web designer in 2022 and get
+                        remot job?"
+                        />
+                       <div class="blog__infor">
+                            <p class="desc">21 November 2021</p>
+                            <p class="question">
+                                How to become a pro web designer in 2022 and get
+                                remot job?
+                            </p>
+                            <button class="btn">Read More</button>
+                       </div>
+                    </article>
+                </main>
+                <div class="dots">
+                    <span class="dot"></span>
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
                 </div>
             </div>
         </div>
