--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body style="height: 5000px">
+    <body>
         <header class="header">
             <div class="content">
                 <!-- navbar -->
@@ -329,51 +329,54 @@
                 <main class="main-blog">
                     <!-- blog item 1 -->
                     <article class="blog-box">
-                        <img class="blog-img"
+                        <img
+                            class="blog-img"
                             src="./assets/img/blog-1.avif"
                             alt=" How to become a pro web designer in 2022 and get
                         remot job?"
                         />
-                       <div class="blog__infor">
+                        <div class="blog__infor">
                             <p class="desc">21 November 2021</p>
                             <p class="question">
                                 How to become a pro web designer in 2022 and get
                                 remot job?
                             </p>
                             <button class="btn">Read More</button>
-                       </div>
+                        </div>
                     </article>
                     <!-- blog item 2 -->
                     <article class="blog-box">
-                        <img class="blog-img"
+                        <img
+                            class="blog-img"
                             src="./assets/img/blog-2.avif"
                             alt=" How to become a pro web designer in 2022 and get
                         remot job?"
                         />
-                       <div class="blog__infor">
+                        <div class="blog__infor">
                             <p class="desc">21 November 2021</p>
                             <p class="question">
                                 How to become a pro web designer in 2022 and get
                                 remot job?
                             </p>
                             <button class="btn">Read More</button>
-                       </div>
+                        </div>
                     </article>
-                     <!-- blog item 3 -->
-                     <article class="blog-box">
-                        <img class="blog-img"
+                    <!-- blog item 3 -->
+                    <article class="blog-box">
+                        <img
+                            class="blog-img"
                             src="./assets/img/blog-3.avif"
                             alt=" How to become a pro web designer in 2022 and get
                         remot job?"
                         />
-                       <div class="blog__infor">
+                        <div class="blog__infor">
                             <p class="desc">21 November 2021</p>
                             <p class="question">
                                 How to become a pro web designer in 2022 and get
                                 remot job?
                             </p>
                             <button class="btn">Read More</button>
-                       </div>
+                        </div>
                     </article>
                 </main>
                 <div class="dots">
@@ -383,5 +386,108 @@
                 </div>
             </div>
         </div>
+        <!-- footer -->
+        <footer class="footer">
+            <div class="content">
+                <div class="inner-footer">
+                    <div class="social">
+                        <img src="./assets/img/Lesson..png" alt="Lesson." />
+                        <p class="footer__desc desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <ul class="inner-social">
+                            <li>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/img/Facebook.png"
+                                        alt="Facebook"
+                                    />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/img/twitter.png"
+                                        alt="twitter"
+                                    />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/img/linked_in.png"
+                                        alt="linked_in"
+                                    />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/img/Instagram.png"
+                                        alt="Instagram"
+                                    />
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- company -->
+                    <div class="company">
+                        <div class="title border-bottom">company</div>
+                        <ul class="mt-16">
+                            <li>
+                                <a href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- support -->
+                    <div class="support">
+                        <div class="title border-bottom">Support</div>
+                        <ul class="mt-16">
+                            <li>
+                                <a href="#!">FAQ’s</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- address -->
+                    <div class="address">
+                        <div class="title border-bottom">Address</div>
+                        <ul class="mt-16">
+                            <li>
+                                <p><span class="title">Location: </span> 27 Division St, New York, NY 10002, USA</p>
+                            </li>
+                            <li>
+                                <p><span class="title">Email: </span> email@gmail.com</p>
+                            </li>
+                            <li>
+                                <p><span class="title">Phone: </span> + 000 1234 567 890</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="coppy-right">
+                    <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+           
+        </footer>
     </body>
 </html>
